--- a/style.scss
+++ b/style.scss
@@ -5,6 +5,7 @@
 /* Colors */
 
 $c-h2: #7E005D;
+$c-h3: #394E41;
 
 $c-interest-bg: #F3F5ED;
 $c-interest-label: #79A458;
@@ -227,14 +228,20 @@ h2, #content h2 {
 h3, #content h3 {
   @extend .pstyle-h3;
   text-transform: uppercase;
+  color: $c-h3;
+  font-weight: 300;
 }
 h4, #content h4 {
   @extend .pstyle-h4;
   text-transform: uppercase;
+  color: $c-h3;
+  font-weight: 300;
 }
 h5, #content h5 {
   @extend .pstyle-h5;
   text-transform: uppercase;
+  color: $c-h3;
+  font-weight: 300;
 }
 
 #content h1, #content h2, #content h3, #content h4, #content h5, #content h6 {
