Add source code note

--- a/footer.html.erb
+++ b/footer.html.erb
@@ -2,7 +2,7 @@
 <div id="footer-inner">
 
   <div id="footer-devel">
-    O <b>escambo</b> é desenvolvido e mantido pelo Instituto Intercidadania.
+    O <b>escambo</b> é desenvolvido e mantido pelo Instituto Intercidadania. Veja o código fonte em <%= link_to 'github.com/ESCAMBO', 'http://github.com/ESCAMBO' %>.
   </div>
 
   <div>
