--- a/style.scss
+++ b/style.scss
@@ -536,9 +536,9 @@ body.template-leftbar .box-1 {
 
 /* end */
 
-/* escambo button */
+/* Buttons */
 
-.do-escambo-button {
+.action-button {
   @extend .pstyle-button-small;
   background: $c-exchange;
   color: white;
@@ -611,7 +611,7 @@ body.template-leftbar .box-1 {
   }
 
   .exchange {
-    @extend .do-escambo-button;
+    @extend .action-button;
     position: absolute;
     bottom: $padding;
     right: $padding;
@@ -716,7 +716,7 @@ body.template-leftbar .box-1 {
   }
 
   .exchange-button{
-    @extend .do-escambo-button;    
+    @extend .action-button;    
     margin-top: -28px;
     margin-left: $base;
   }
@@ -801,7 +801,37 @@ body.template-leftbar .box-1 {
 
     .info, .evaluation, .members {
       border-bottom: $border solid $c-profile-info-border;
+      padding-bottom: $padding;
       margin-bottom: $padding;
+    }
+
+    .info {
+      .state, .city, .address, .phone1, .phone2, .email, .site {
+        float: none;
+        clear: both;
+        margin-bottom: $margin;
+      }
+      .state, .city, .phone1, .phone2 {
+        float: left;
+        clear: none;
+        display: inline-block;
+        width: $module;
+      }
+      .state, .phone1 {
+        margin-right: $margin;
+      }
+      .city {
+        width: $module2;
+      }
+
+      .label {
+        font-weight: bold;
+      }
+
+      .contact-button a {
+        @extend .action-button;
+        display: block;
+      }
     }
   }
 }
