Fix wraps and wireframe size

--- a/footer.html.erb
+++ b/footer.html.erb
@@ -1,18 +1,20 @@
 
-<div id="footer-inner">
+<div id="footer-wrap-1">
+  <div id="footer-wrap-2">
 
-  <div id="footer-devel">
-    O <b>escambo</b> é desenvolvido e mantido pelo Instituto Intercidadania.
-  </div>
-
-  <div>
-    <div id="footer-support">
-      APOIO
+    <div id="footer-devel">
+      O <b>escambo</b> é desenvolvido e mantido pelo Instituto Intercidadania.
     </div>
 
-    <img src="/designs/themes/escambo/images/logo-intercidadania.png"/>
-    <img src="/designs/themes/escambo/images/logo-eita.png"/>
-    <img src="/designs/themes/escambo/images/logo-preface.png"/>
-  </div>
+    <div>
+      <div id="footer-support">
+        APOIO
+      </div>
 
+      <img src="/designs/themes/escambo/images/logo-intercidadania.png"/>
+      <img src="/designs/themes/escambo/images/logo-eita.png"/>
+      <img src="/designs/themes/escambo/images/logo-preface.png"/>
+    </div>
+
+  </div>
 </div>
