--- a/style.scss
+++ b/style.scss
@@ -26,10 +26,8 @@ $c-footer-bg: #FFF386;
 /* Widths for paddings, margins and sizes definition */
 
 $base: 12px;
-$half-base: $base/2;
 $module: 6*$base;
 $intercolumn: 2*$base;
-
 $module1: 1*$module + 1*$intercolumn;
 $module2: 2*$module + 1*$intercolumn;
 $module3: 3*$module + 2*$intercolumn;
@@ -39,25 +37,16 @@ $module6: 6*$module + 5*$intercolumn;
 $module7: 7*$module + 6*$intercolumn;
 $module8: 8*$module + 7*$intercolumn;
 $module9: 9*$module + 8*$intercolumn;
-$module10: 10*$module + 9*$intercolumn;
-$wireframe: $module10 + $intercolumn;
+$wireframe: 10*$module + 10*$intercolumn;
 
 $margin: $intercolumn;
 $half-margin: $margin/2;
-
 /* REMEMBER to disccount from padding the borders size, as borders uses padding's space. */
 $padding: $intercolumn/2;
 $half-padding: $padding/2;
 
 $border: 1px;
 
-.padding {
-  padding: $padding;
-  display: inline-block;
-}
-.half-padding {
-  padding: $half-padding;
-}
 .no-v-padding {
   padding-top: 0;
   padding-bottom: 0;
@@ -70,15 +59,21 @@ $border: 1px;
 /* end */
 
 /* Images */
-.icon {
-  width: $base*2.5;        
-  height: $base*2.5;
-}
-
 $image-zoom: '/designs/themes/escambo/images/lupa.png';
 $image-heart-empty: '/designs/themes/escambo/images/heart-empty.png';
 $image-exchange: '/designs/themes/escambo/images/troca_simbolo.png';
 $image-exchange-empty: '/designs/themes/escambo/images/troca_simbolo_vazio.png';
+
+.icon {
+  width: $base*2.5;        
+  height: $base*2.5;
+  border: none; /* overwrite application.css */
+}
+/* overwrite application.css */
+.icon:hover {
+  border: none;
+  cursor: auto;
+}
 
 /* Fonts */
 
@@ -394,9 +389,9 @@ body.template-leftbar .box-1 {
 }
 
 .header-button {
-  @extend .padding;
+  padding: $padding;
   background: #F6FCA6;
-  margin-right: $half-base;
+  margin-right: $half-padding;
   margin-bottom: $padding;
   font-weight: bold;
   text-decoration: none;
@@ -418,7 +413,7 @@ body.template-leftbar .box-1 {
       margin-bottom: 40px;
     }
     #user .not-logged-in, #header-links { 
-      margin-top: 50px;
+      margin-top: 6*$base;
     }
   }
 
@@ -446,9 +441,9 @@ body.template-leftbar .box-1 {
 
   background: #7857B8;
   height: $height;
+  padding: $half-padding;
   margin-bottom: $margin;
-  @extend .half-padding;
-  @extend .no-h-padding;
+  margin-top: $half-margin;
 
   #profile-line {
     $height: $margin;
@@ -488,6 +483,7 @@ body.template-leftbar .box-1 {
     img {
     }
     .profile-name {
+      line-height: 2*$base;
       color: white;
     }
 
@@ -495,8 +491,8 @@ body.template-leftbar .box-1 {
       float: right;
 
       .organization-button {
-        @extend .half-padding;
         height: $padding;
+        padding: $half-padding;
         display: inline-block;
         font-size: 11px;
         background: #FAF7DC;
