Add missing change to last commit

--- a/header.html.erb
+++ b/header.html.erb
@@ -1,4 +1,4 @@
-<div id="theme-wrap" class="<%= user ? 'logged' : 'not-logged' %>">
+<div id="theme-header-wrap" class="<%= user ? 'logged' : 'not-logged' %>">
   <h1>escambo</h1>
 
   <%= javascript_include_tag '/designs/themes/escambo/escambo.js' %>
