Add currency link

--- a/style.scss
+++ b/style.scss
@@ -278,6 +278,12 @@ h5, #content h5 {
   font-weight: 300;
 }
 
+table {
+  width: auto;
+}
+tr:hover td {
+  background:transparent;
+}
 th, td {
   @extend .pstyle-none;
   height: auto;
@@ -578,6 +584,10 @@ body.template-leftbar .box-1 {
 
 /* Buttons and inputs */
 
+.exchange-action-button {
+  @extend .pstyle-button-small;
+}
+
 .search-box {
   @extend .sniffer-search-box;
 }
@@ -774,7 +784,7 @@ body.template-leftbar .box-1 {
   }
 
   .exchange-button{
-    @extend .action-button;    
+    @extend .exchange-action-button;    
     margin-top: -28px;
     margin-left: $base;
   }
@@ -849,7 +859,7 @@ body.template-leftbar .box-1 {
       }
 
       .contact-button a {
-        @extend .action-button;
+        @extend .exchange-action-button;
         display: block;
       }
     }
