--- a/profile_line.html.erb
+++ b/profile_line.html.erb
@@ -15,7 +15,7 @@
             <%= link_to _('network'), '', :class => 'organization-button' %>
             <%= link_to _('products'), {:controller => :catalog, :profile => profile.identifier}, :class => 'organization-button' %>
             <%= link_to _('knowledges'), '', :class => 'organization-button' %>
-            <%= link_to _('currencies'), '', :class => 'organization-button' %>
+            <%= link_to _('currencies'), {:controller => :currency_plugin_myprofile, :action => :index, :profile => profile.identifier}, :class => 'organization-button' %>
             <%= link_to _('sniffer'), {:controller => :sniffer_plugin_myprofile, :action => :search, :profile => profile.identifier}, :class => 'organization-button' %>
           </span>
         <% end %>
