Change offers link

--- a/header.html.erb
+++ b/header.html.erb
@@ -6,7 +6,7 @@
   <div id='header-links'>
     <%= link_to _('home'), '/' %>
     <%= link_to _('culture points'), :controller => :search, :action => :enterprises %>
-    <%= link_to _('offers, interests and knowledges'), :controller => :search, :action => :index %>
+    <%= link_to _('offers, knowledges and interests'), :controller => :search, :action => :index %>
     <%= link_to _('how it works'), '#' %>
   </div>
 
