--- a/style.scss
+++ b/style.scss
@@ -395,24 +395,12 @@ body.template-leftbar .box-1 {
 
 /* Theme structure */
 
-#top-search {
-  display: none;
-}
-
+#top-search,
 #navigation {
   display: none;
 }
-
 #wrap-2 {
   border: none;
-}
-
-#user {
-  text-align: auto;
-  position: inherit;
-  right: 0;
-  display: inline;
-  float: right;
 }
 
 .header-button {
@@ -464,6 +452,70 @@ body.template-leftbar .box-1 {
     top: 0;
     left: 0;
     z-index: 5;
+  }
+
+  #theme-header-wrap {
+
+    &.logged {
+    }
+    &.not-logged {
+    }
+
+    #header-links { 
+      float: left;
+
+      a {
+        z-index: 10;
+        position: relative;
+        opacity: .7;
+      }
+    }
+
+    #user .not-logged-in a, #header-links a { 
+      @extend .header-button;
+    }
+
+    #user {
+      text-align: auto;
+      position: inherit;
+      right: 0;
+      display: inline;
+      float: right;
+
+      .logged-in {
+        @extend .container-clean;
+        border: $border solid black;
+        border-top: none;
+        background: #FAF7DC;
+      }
+      .logged-in, .not-logged-in {
+        display: block;
+      }
+
+      .user-logged-left {
+        float: left;
+
+        .profile-image {
+          height: 7*$base;
+          width: 7*$base;
+        }
+      }
+
+      .user-logged-right {
+        float: right;
+        padding: $padding - $border;
+        font-weight: bold;
+        text-align: left;
+
+        > * {
+          margin-bottom: $half-padding;
+        }
+
+        select {
+          width: $module2;
+        }
+      }
+    }
   }
 }
 
@@ -547,57 +599,6 @@ body.template-leftbar .box-1 {
   }
   #footer-devel b, #footer-support {
     color: $color-exchange;
-  }
-}
-
-
-#header-links { 
-  float: left;
-
-  a {
-    z-index: 10;
-    position: relative;
-    opacity: .7;
-  }
-}
-
-#user .not-logged-in a, #header-links a { 
-  @extend .header-button;
-}
-#user {
-
-  .logged-in {
-    @extend .container-clean;
-    border: $border solid black;
-    border-top: none;
-    background: #FAF7DC;
-  }
-  .logged-in, .not-logged-in {
-    display: block;
-  }
-
-  .user-logged-left {
-    float: left;
-
-    .profile-image {
-      height: 7*$base;
-      width: 7*$base;
-    }
-  }
-
-  .user-logged-right {
-    float: right;
-    padding: $padding - $border;
-    font-weight: bold;
-    text-align: left;
-
-    > * {
-      margin-bottom: $half-padding;
-    }
-
-    select {
-      width: $module2;
-    }
   }
 }
 
@@ -907,6 +908,5 @@ body.template-leftbar .box-1 {
   #content {
     padding: 0;
   }
-
 }
 
