--- a/profile_line.html.erb
+++ b/profile_line.html.erb
@@ -1,4 +1,4 @@
-<% if profile and (@profile != @active_organization or active_organization) %>
+<% if profile and (profile != @active_organization or active_organization) %>
 
   <div id="profile-line-wrap-1" class="<%= active_organization ? 'active-organization' : 'profile-header' %>">
     <div id="profile-line-wrap-2">
@@ -7,19 +7,18 @@
         <%= profile_image profile, :portrait, :class => 'profile-image' %>
         <span class="profile-name"><%= profile.name %></span>
 
-        <% if active_organization %>
-          <span id="organization-menu">
-            <%= link_to _('profile'), profile.url, :class => 'organization-button' %>
-            <%= link_to _('members'), {:controller => :profile, :action => :members}, :class => 'organization-button' %>
-            <%= link_to _('exchanges'), {:controller => :exchange_plugin_myprofile, :action => :index}, :class => 'organization-button'  %>
-            <%= link_to _('network'), '', :class => 'organization-button' %>
-            <%= link_to _('offers'), {:controller => :profile, :action => :products}, :class => 'organization-button' %>
-            <%= link_to _('knowledges'), {:controller => :profile, :action => :knowledges}, :class => 'organization-button' %>
-            <%= link_to _('interests'), {:controller => :profile, :action => :interests}, :class => 'organization-button' %>
-            <%= link_to _('currencies'), {:controller => :currency_plugin_myprofile, :action => :index, :profile => profile.identifier}, :class => 'organization-button' %>
-            <%= link_to _('sniffer'), {:controller => :sniffer_plugin_myprofile, :action => :search, :profile => profile.identifier}, :class => 'organization-button' %>
-          </span>
-        <% end %>
+        <% admin = (user.is_admin?(environment)) || user.is_admin?(profile) %>
+        <span id="organization-menu">
+          <%= link_to _('profile'), profile.url, :class => 'organization-button' %>
+          <%= link_to _('members'), {:controller => :profile, :action => :members}, :class => 'organization-button' %>
+          <%= link_to _('exchanges'), {:controller => :exchange_plugin_myprofile, :action => :index}, :class => 'organization-button' if admin %>
+          <%# link_to _('network'), '', :class => 'organization-button' %>
+          <%= link_to _('offers'), {:controller => :profile, :action => :products}, :class => 'organization-button' %>
+          <%= link_to _('knowledges'), {:controller => :profile, :action => :knowledges}, :class => 'organization-button' %>
+          <%= link_to _('interests'), {:controller => :profile, :action => :interests}, :class => 'organization-button' %>
+          <%= link_to _('currencies'), {:controller => :currency_plugin_myprofile, :action => :index}, :class => 'organization-button' if admin %>
+          <%= link_to _('sniffer'), {:controller => :sniffer_plugin_myprofile, :action => :search}, :class => 'organization-button' if admin %>
+        </span>
 
         <div class="clean"></div>
       </div>
