--- a/style.scss
+++ b/style.scss
@@ -15,7 +15,7 @@
 $base: 12px;
 $module: 6*$base;
 $intercolumn: 2*$base;
-$module1: 1*$module + 1*$intercolumn;
+$module1: 1*$module + 0*$intercolumn;
 $module2: 2*$module + 1*$intercolumn;
 $module3: 3*$module + 2*$intercolumn;
 $module4: 4*$module + 3*$intercolumn;
@@ -61,7 +61,6 @@ $color-profile-info-bg: #EBF49D;
 $color-profile-info-border: #C5AAA5;
 
 $color-footer-bg: #FFF386;
-
 
 /* Images */
 $image-zoom: '/designs/themes/escambo/images/lupa.png';
@@ -354,9 +353,8 @@ textarea, .formfield textarea {
 
 #content {
   margin-top: 0;
+  min-height: 500px; /* put the header in the end */
 }
-
-
 #wrap-1 {
   position: relative;
 }
@@ -556,10 +554,15 @@ body.template-leftbar .box-1 {
     .profile-name {
       float: left;
     }
+
+    #organization-menu {
+      float: right;
+    }
   }
 
   &.profile-header {
     $image-size: 10*$base;
+    padding-right: $padding;
 
     #profile-line-wrap-2 {
       width: 100%;
@@ -577,6 +580,10 @@ body.template-leftbar .box-1 {
     .profile-name {
       float: right;
     }
+
+    #organization-menu {
+      float: left;
+    }
   }
 
   img {
@@ -587,7 +594,6 @@ body.template-leftbar .box-1 {
   }
 
   #organization-menu {
-    float: right;
 
     .organization-button {
       height: $padding;
